--- a/WebApplicationLogin/WebApplicationLogin.csproj
+++ b/WebApplicationLogin/WebApplicationLogin.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Models\Quiz.cs" />
     <Compile Include="Models\SClass.cs" />
     <Compile Include="Models\Subject.cs" />
+    <Compile Include="Models\ViewModels\QuizViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
