--- a/WebApplicationLogin/WebApplicationLogin.csproj
+++ b/WebApplicationLogin/WebApplicationLogin.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\StartupHelper.cs" />
     <Compile Include="Migrations\201701221405315_initial.cs" />
     <Compile Include="Migrations\201701221405315_initial.Designer.cs">
       <DependentUpon>201701221405315_initial.cs</DependentUpon>
