--- a/WebApplicationLogin/WebApplicationLogin.csproj
+++ b/WebApplicationLogin/WebApplicationLogin.csproj
@@ -195,6 +195,10 @@
     <Compile Include="Migrations\201701222017223_Add_file_pathEdu_column_to_Mysubject_table.Designer.cs">
       <DependentUpon>201701222017223_Add_file_pathEdu_column_to_Mysubject_table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701222243473_Create_user_connection_in_Quiz_table.cs" />
+    <Compile Include="Migrations\201701222243473_Create_user_connection_in_Quiz_table.Designer.cs">
+      <DependentUpon>201701222243473_Create_user_connection_in_Quiz_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Grade.cs" />
@@ -207,6 +211,7 @@
     <Compile Include="Models\Quiz.cs" />
     <Compile Include="Models\SClass.cs" />
     <Compile Include="Models\Subject.cs" />
+    <Compile Include="Models\ViewModels\QuestionViewModel.cs" />
     <Compile Include="Models\ViewModels\QuizViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -334,6 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701222017223_Add_file_pathEdu_column_to_Mysubject_table.resx">
       <DependentUpon>201701222017223_Add_file_pathEdu_column_to_Mysubject_table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701222243473_Create_user_connection_in_Quiz_table.resx">
+      <DependentUpon>201701222243473_Create_user_connection_in_Quiz_table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
