--- a/WebApplicationLogin/WebApplicationLogin.csproj
+++ b/WebApplicationLogin/WebApplicationLogin.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MySubjectsController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
+    <Compile Include="Controllers\PlansController.cs" />
     <Compile Include="Controllers\QuestionsController.cs" />
     <Compile Include="Controllers\QuizsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
@@ -199,6 +200,10 @@
     <Compile Include="Migrations\201701222243473_Create_user_connection_in_Quiz_table.Designer.cs">
       <DependentUpon>201701222243473_Create_user_connection_in_Quiz_table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701231433197_Add_plan_Modif_SClass_Subject.cs" />
+    <Compile Include="Migrations\201701231433197_Add_plan_Modif_SClass_Subject.Designer.cs">
+      <DependentUpon>201701231433197_Add_plan_Modif_SClass_Subject.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Grade.cs" />
@@ -207,6 +212,8 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MySubject.cs" />
     <Compile Include="Models\News.cs" />
+    <Compile Include="Models\Plan.cs" />
+    <Compile Include="Models\PlanSubject.cs" />
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\Quiz.cs" />
     <Compile Include="Models\SClass.cs" />
@@ -317,6 +324,11 @@
     <Content Include="Views\Subjects\Edit.cshtml" />
     <Content Include="Views\Subjects\Index.cshtml" />
     <Content Include="Views\Account\ForgotPasswordError.cshtml" />
+    <Content Include="Views\Plans\Create.cshtml" />
+    <Content Include="Views\Plans\Delete.cshtml" />
+    <Content Include="Views\Plans\Details.cshtml" />
+    <Content Include="Views\Plans\Edit.cshtml" />
+    <Content Include="Views\Plans\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -342,6 +354,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701222243473_Create_user_connection_in_Quiz_table.resx">
       <DependentUpon>201701222243473_Create_user_connection_in_Quiz_table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701231433197_Add_plan_Modif_SClass_Subject.resx">
+      <DependentUpon>201701231433197_Add_plan_Modif_SClass_Subject.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
