--- a/WebApplicationLogin/WebApplicationLogin.csproj
+++ b/WebApplicationLogin/WebApplicationLogin.csproj
@@ -204,6 +204,14 @@
     <Compile Include="Migrations\201701231433197_Add_plan_Modif_SClass_Subject.Designer.cs">
       <DependentUpon>201701231433197_Add_plan_Modif_SClass_Subject.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701232150343_Add_quizs_conn_to_question.cs" />
+    <Compile Include="Migrations\201701232150343_Add_quizs_conn_to_question.Designer.cs">
+      <DependentUpon>201701232150343_Add_quizs_conn_to_question.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701232256545_Remove_user_conn_from_question.cs" />
+    <Compile Include="Migrations\201701232256545_Remove_user_conn_from_question.Designer.cs">
+      <DependentUpon>201701232256545_Remove_user_conn_from_question.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Grade.cs" />
@@ -357,6 +365,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701231433197_Add_plan_Modif_SClass_Subject.resx">
       <DependentUpon>201701231433197_Add_plan_Modif_SClass_Subject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701232150343_Add_quizs_conn_to_question.resx">
+      <DependentUpon>201701232150343_Add_quizs_conn_to_question.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701232256545_Remove_user_conn_from_question.resx">
+      <DependentUpon>201701232256545_Remove_user_conn_from_question.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
