--- a/WebApplicationLogin/WebApplicationLogin.csproj
+++ b/WebApplicationLogin/WebApplicationLogin.csproj
@@ -171,46 +171,24 @@
     <Compile Include="Controllers\GradeListsController.cs" />
     <Compile Include="Controllers\GradesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LanguageController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\MySubjectsController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\PlansController.cs" />
     <Compile Include="Controllers\QuestionsController.cs" />
     <Compile Include="Controllers\QuizsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SClassesController.cs" />
+    <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Controllers\SubjectsController.cs" />
+    <Compile Include="Controllers\TeachersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\StartupHelper.cs" />
-    <Compile Include="Migrations\201701221405315_initial.cs" />
-    <Compile Include="Migrations\201701221405315_initial.Designer.cs">
-      <DependentUpon>201701221405315_initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201701221728345_Add_file_path_column_to_subject_table.cs" />
-    <Compile Include="Migrations\201701221728345_Add_file_path_column_to_subject_table.Designer.cs">
-      <DependentUpon>201701221728345_Add_file_path_column_to_subject_table.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201701222017223_Add_file_pathEdu_column_to_Mysubject_table.cs" />
-    <Compile Include="Migrations\201701222017223_Add_file_pathEdu_column_to_Mysubject_table.Designer.cs">
-      <DependentUpon>201701222017223_Add_file_pathEdu_column_to_Mysubject_table.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201701222243473_Create_user_connection_in_Quiz_table.cs" />
-    <Compile Include="Migrations\201701222243473_Create_user_connection_in_Quiz_table.Designer.cs">
-      <DependentUpon>201701222243473_Create_user_connection_in_Quiz_table.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201701231433197_Add_plan_Modif_SClass_Subject.cs" />
-    <Compile Include="Migrations\201701231433197_Add_plan_Modif_SClass_Subject.Designer.cs">
-      <DependentUpon>201701231433197_Add_plan_Modif_SClass_Subject.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201701232150343_Add_quizs_conn_to_question.cs" />
-    <Compile Include="Migrations\201701232150343_Add_quizs_conn_to_question.Designer.cs">
-      <DependentUpon>201701232150343_Add_quizs_conn_to_question.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201701232256545_Remove_user_conn_from_question.cs" />
-    <Compile Include="Migrations\201701232256545_Remove_user_conn_from_question.Designer.cs">
-      <DependentUpon>201701232256545_Remove_user_conn_from_question.cs</DependentUpon>
+    <Compile Include="Migrations\201701240209203_third_chance.cs" />
+    <Compile Include="Migrations\201701240209203_third_chance.Designer.cs">
+      <DependentUpon>201701240209203_third_chance.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -218,17 +196,23 @@
     <Compile Include="Models\GradeList.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\MySubject.cs" />
     <Compile Include="Models\News.cs" />
     <Compile Include="Models\Plan.cs" />
     <Compile Include="Models\PlanSubject.cs" />
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\Quiz.cs" />
     <Compile Include="Models\SClass.cs" />
+    <Compile Include="Models\Student.cs" />
     <Compile Include="Models\Subject.cs" />
+    <Compile Include="Models\Teacher.cs" />
     <Compile Include="Models\ViewModels\QuestionViewModel.cs" />
     <Compile Include="Models\ViewModels\QuizViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\HomeLang.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HomeLang.resx</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -297,11 +281,6 @@
     <Content Include="Views\Grades\Edit.cshtml" />
     <Content Include="Views\Grades\Index.cshtml" />
     <Content Include="Views\Manage\ChangeSurname.cshtml" />
-    <Content Include="Views\MySubjects\Create.cshtml" />
-    <Content Include="Views\MySubjects\Delete.cshtml" />
-    <Content Include="Views\MySubjects\Details.cshtml" />
-    <Content Include="Views\MySubjects\Edit.cshtml" />
-    <Content Include="Views\MySubjects\Index.cshtml" />
     <Content Include="Views\News\Create.cshtml" />
     <Content Include="Views\News\Delete.cshtml" />
     <Content Include="Views\News\Details.cshtml" />
@@ -337,6 +316,17 @@
     <Content Include="Views\Plans\Details.cshtml" />
     <Content Include="Views\Plans\Edit.cshtml" />
     <Content Include="Views\Plans\Index.cshtml" />
+    <Content Include="Views\Students\Create.cshtml" />
+    <Content Include="Views\Students\Delete.cshtml" />
+    <Content Include="Views\Students\Details.cshtml" />
+    <Content Include="Views\Students\Edit.cshtml" />
+    <Content Include="Views\Students\Index.cshtml" />
+    <Content Include="Views\Teachers\Create.cshtml" />
+    <Content Include="Views\Teachers\Delete.cshtml" />
+    <Content Include="Views\Teachers\Details.cshtml" />
+    <Content Include="Views\Teachers\Edit.cshtml" />
+    <Content Include="Views\Teachers\Index.cshtml" />
+    <Content Include="Views\Language\Lang.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -351,26 +341,12 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201701221405315_initial.resx">
-      <DependentUpon>201701221405315_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201701240209203_third_chance.resx">
+      <DependentUpon>201701240209203_third_chance.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701221728345_Add_file_path_column_to_subject_table.resx">
-      <DependentUpon>201701221728345_Add_file_path_column_to_subject_table.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701222017223_Add_file_pathEdu_column_to_Mysubject_table.resx">
-      <DependentUpon>201701222017223_Add_file_pathEdu_column_to_Mysubject_table.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701222243473_Create_user_connection_in_Quiz_table.resx">
-      <DependentUpon>201701222243473_Create_user_connection_in_Quiz_table.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701231433197_Add_plan_Modif_SClass_Subject.resx">
-      <DependentUpon>201701231433197_Add_plan_Modif_SClass_Subject.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701232150343_Add_quizs_conn_to_question.resx">
-      <DependentUpon>201701232150343_Add_quizs_conn_to_question.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701232256545_Remove_user_conn_from_question.resx">
-      <DependentUpon>201701232256545_Remove_user_conn_from_question.cs</DependentUpon>
+    <EmbeddedResource Include="Resources\HomeLang.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>HomeLang.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
